tests/rosetta/out/C/abc-problem.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:14Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static int _lambda0_bl;
int _lambda0(char *w) { return canSpell(w, _lambda0_bl); }

int fields(char *s) {
  list_string tmp1 = {0, NULL};
  int res = tmp1;
  const char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    char *tmp2 = slice_string(s, i, i + 1);
    const char *c = tmp2;
    if ((strcmp(c, " ") == 0)) {
      if (strlen(cur) > 0) {
        list_string tmp3 = list_string_create(1);
        tmp3.data[0] = cur;
        list_string tmp4 = concat_list_string(res, tmp3);
        res = tmp4;
        cur = "";
      }
    } else {
      char *tmp5 = concat_string(cur, c);
      cur = tmp5;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp6 = list_string_create(1);
    tmp6.data[0] = cur;
    list_string tmp7 = concat_list_string(res, tmp6);
    res = tmp7;
  }
  return res;
}

int canSpell(char *word, list_string blks) {
  if (strlen(word) == 0) {
    return 1;
  }
  char *tmp8 = slice_string(word, 0, 1);
  const char *c = lower(tmp8);
  int i = 0;
  while (i < blks.len) {
    const char *b = blks.data[i];
    char *tmp9 = slice_string(b, 0, 1);
    char *tmp10 = slice_string(b, 1, 2);
    if (c == lower(tmp9) || c == lower(tmp10)) {
      list_string tmp11 = {0, NULL};
      int rest = tmp11;
      int j = 0;
      while (j < blks.len) {
        if (j != i) {
          list_string tmp12 = list_string_create(1);
          tmp12.data[0] = blks.data[j];
          list_string tmp13 = concat_list_string(rest, tmp12);
          rest = tmp13;
        }
        j = j + 1;
      }
      char *tmp14 = slice_string(word, 1, word.len);
      if (canSpell(tmp14, rest)) {
        return 1;
      }
    }
    i = i + 1;
  }
  return 0;
}

int (*newSpeller(char *blocks))(const char *) {
  int bl = fields(blocks);
  return (_lambda0_bl = bl, _lambda0);
}

int main() {
  int (*sp)(const char *) =
      newSpeller("BO XK DQ CP NA GT RE TG QD FS JW HU VI AN OB ER FS LY PC ZM");
  list_string tmp15 = list_string_create(7);
  tmp15.data[0] = "A";
  tmp15.data[1] = "BARK";
  tmp15.data[2] = "BOOK";
  tmp15.data[3] = "TREAT";
  tmp15.data[4] = "COMMON";
  tmp15.data[5] = "SQUAD";
  tmp15.data[6] = "CONFUSE";
  for (int tmp16 = 0; tmp16 < tmp15.len; tmp16++) {
    char *word = tmp15.data[tmp16];
    char *tmp17 = concat_string(word, " ");
    char *tmp18 = _str(sp(word));
    char *tmp19 = concat_string(tmp17, tmp18);
    printf("%s\n", tmp19);
  }
}

int main() {
  main();
  return 0;
}
